@@ -10,6 +10,11 @@ import java.util.stream.Collectors;
 
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
+import org.jdom2.Element;
+import org.mycore.common.MCRException;
+import org.mycore.common.xml.MCRNodeBuilder;
+import org.mycore.mods.merger.MCRMerger;
+import org.mycore.mods.merger.MCRMergerFactory;
 import org.mycore.user2.MCRUser;
 import org.mycore.user2.MCRUserAttribute;
 import org.mycore.user2.MCRUserManager;
@@ -17,6 +22,7 @@ import org.mycore.user2.MCRUserManager;
 /**
  * Given a MCRUser, match against the local MCRUsers, returning the given User or an existing local one if matched.
  * If matched, the returned local MCRUsers attributes are enriched by attributes from the given MCRUser.
+ * The attribute id_connection is considered unique and can not be enriched/added a second time.
  *
  * @author Pascal Rost
  */
@@ -24,28 +30,39 @@ public class MCRUserMatcherLocal implements MCRUserMatcher {
 
     private final static Logger LOGGER = LogManager.getLogger(MCRUserMatcherLocal.class);
 
+    private final static String CONNECTION_TYPE_NAME = "id_connection";
+
+    private static final String XPATH_TO_BUILD_MODSNAME = "mods:name[@type='personal']/mods:namePart";
+
     @Override
     public MCRUserMatcherDTO matchUser(MCRUserMatcherDTO matcherDTO) {
-
         MCRUser mcrUser = matcherDTO.getMCRUser();
         List<MCRUser> matchingUsers = new ArrayList<>(getUsersForGivenAttributes(mcrUser.getAttributes()));
-        if(matchingUsers.size() == 1) {
+
+        MCRMerger nameThatShouldMatch = buildNameMergerFrom(mcrUser);
+        matchingUsers.removeIf(userToTest -> !buildNameMergerFrom(userToTest).isProbablySameAs(nameThatShouldMatch));
+
+        if (!matchingUsers.isEmpty()) {
             MCRUser matchingUser = matchingUsers.get(0);
 
-            LOGGER.info("Found local matching user! Matched user: {} and attributes: {} with local user: {} and attributes: {}",
-                    mcrUser.getUserName(),
-                    mcrUser.getAttributes().stream().map(a -> a.getName() + "=" + a.getValue()).collect(Collectors.joining(" | ")),
-                    matchingUser.getUserName(),
-                    matchingUser.getAttributes().stream().map(a -> a.getName() + "=" + a.getValue()).collect(Collectors.joining(" | ")));
+            LOGGER.info(
+                "Found local matching user! Matched user: {} and attributes: {} with local user: {} and attributes: {}",
+                mcrUser.getUserName(),
+                mcrUser.getAttributes().stream().map(a -> a.getName() + "=" + a.getValue())
+                    .collect(Collectors.joining(" | ")),
+                matchingUser.getUserName(),
+                matchingUser.getAttributes().stream().map(a -> a.getName() + "=" + a.getValue())
+                    .collect(Collectors.joining(" | ")));
 
-            // only add not attributes which are not present
-            matchingUser.getAttributes()
-                    .addAll(mcrUser.getAttributes().stream()
-                            .filter(Predicate.not(matchingUser.getAttributes()::contains))
-                            .collect(Collectors.toUnmodifiableList()));
+            final boolean hasMatchingUserConnectionKey = matchingUser.getUserAttribute(CONNECTION_TYPE_NAME) != null;
 
-            mcrUser = matchingUser;
-            matcherDTO.setMCRUser(mcrUser);
+            // only add attributes which are not present, don't add duplicate connection attributes
+            matchingUser.getAttributes().addAll(mcrUser.getAttributes().stream()
+                .filter(attribute -> !attribute.getName().equals(CONNECTION_TYPE_NAME) || !hasMatchingUserConnectionKey)
+                .filter(Predicate.not(matchingUser.getAttributes()::contains))
+                .toList());
+
+            matcherDTO.setMCRUser(matchingUser);
             matcherDTO.setMatchedOrEnriched(true);
         }
         return matcherDTO;
@@ -53,12 +70,22 @@ public class MCRUserMatcherLocal implements MCRUserMatcher {
 
     private Set<MCRUser> getUsersForGivenAttributes(SortedSet<MCRUserAttribute> mcrAttributes) {
         Set<MCRUser> users = new HashSet<>();
-        for(MCRUserAttribute mcrAttribute : mcrAttributes) {
+        for (MCRUserAttribute mcrAttribute : mcrAttributes) {
             String attributeName = mcrAttribute.getName();
             String attributeValue = mcrAttribute.getValue();
-            users.addAll(MCRUserManager.getUsers(attributeName, attributeValue).collect(Collectors.toList()));
+            users.addAll(MCRUserManager.getUsers(attributeName, attributeValue).toList());
         }
         return users;
+    }
+
+    private MCRMerger buildNameMergerFrom(MCRUser user) {
+        try {
+            Element modsName = new MCRNodeBuilder().buildElement(XPATH_TO_BUILD_MODSNAME,
+                user.getRealName(), null).getParentElement();
+            return MCRMergerFactory.buildFrom(modsName);
+        } catch (Exception shouldNeverOccur) {
+            throw new MCRException(shouldNeverOccur);
+        }
     }
 
 }
